package saifedine.week23.CarsimExtended;

public class FuelTank {
}
